Fixed visibility CSS classes

--- a/src/props/layout/visibility/index.css
+++ b/src/props/layout/visibility/index.css
@@ -1,12 +1,12 @@
-.simple-ui-visible,
-.simple-ui-hover\:visible:hover,
-.simple-ui-focus\:visible:focus,
-.simple-ui-active\:visible:active {
-  visibility: visible;
+.simple-ui-visibility-visible,
+.simple-ui-hover\:visibility-visible:hover,
+.simple-ui-focus\:visibility-visible:focus,
+.simple-ui-active\:visibility-visible:active {
+	visibility: visible;
 }
-.simple-ui-invisible,
-.simple-ui-hover\:invisible:hover,
-.simple-ui-focus\:invisible:focus,
-.simple-ui-active\:invisible:active {
-  visibility: hidden;
+.simple-ui-visibility-invisible,
+.simple-ui-hover\:visibility-invisible:hover,
+.simple-ui-focus\:visibility-invisible:focus,
+.simple-ui-active\:visibility-invisible:active {
+	visibility: hidden;
 }
